# coder_v1

./: .gitignore  AGENTS.md  AGENTS_a1.1.md  Cargo.toml  README.md  analysis_tokens_marimo.py  design_critique.md  pyproject.toml  run-analysis.py  tauri_migration_second_opinion.md
analysis_backend/: __init__.py  analysis_core.py  cli.py  condition_authoring.py  condition_authoring_cli.py  condition_evaluator.py  condition_model.py  data_access.py  distance_matcher.py  export_formatter.py  filter_config.py  frame_schema.py  manual_annotations.py  rendering.py  text_unit_frames.py  token_position.py  worker.py
asset/: cooccurrence-conditions.json
docs/: build_ordinance_analysis_db.py  condition-authoring-format.md  design-condition-editor-json-file-picker.md  folder-input-analysis-db-design.md  full-text-search-conditions-design.md  p1-01-app-impl-inventory.md  p1-08-record-selection-mutation-paths.md  p1-09-cache-invalidation-paths.md  p1-10-side-effect-boundaries.md  p1-11-public-api-review.md  p2-01-viewer-core.md  p2-02-viewer-core-domain-state.md  p2-03-viewer-core-message.md  p2-04-core-output.md  p2-05-job-id-validation.md  p2-06-can-close.md  p2-07-segment-cache-invalidation.md  p2-08-filter-selection-core.md  p2-09-data-source-generation.md  p2-10-filter-csv-loader-tests.md  p3-01-file-dialog-host.md  p3-02-analysis-process-host.md  p3-03-update-event-pipeline.md  p3-04-host-startup-config.md  p3-05-app-logger-interface.md  p4-01-ipc-dto.md  p4-02-ipc-error-shape.md  p4-03-api-version-policy.md  p4-04-ipc-dto-self-check-cli.md  p5-01-workspace-layout.md  (+8 more)
(+166 files in other folders)
