[package]
name = "csv_highlight_viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "csv_highlight_viewer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = "0.31"
csv = "1.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
rusqlite = { version = "0.29", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
