[project]
name = "csv-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "polars>=1.38.1",
    "requests>=2.33.1",
]

[project.optional-dependencies]
analysis-db = [
    "sudachipy>=0.6,<1.0",
    "sudachidict-core>=20240109",
]
