[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "csv-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "polars>=1.38.1",
    "requests>=2.33.1",
]

[project.optional-dependencies]
analysis-db = [
    "sudachipy>=0.6,<1.0",
    "sudachidict-core>=20240109",
]

[project.scripts]
call-gemma4-gemini = "pdf_converter.call_gemma4_gemini:main"

[tool.uv.build-backend]
module-name = "pdf_converter"
module-root = ""
